Bug 271703 - Notification window slides out of screen
Summary: Notification window slides out of screen
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: notifications (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Marco Martin
URL:
Keywords:
: 273267 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-04-25 19:24 UTC by Pyroman
Modified: 2011-05-14 18:08 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.4
Sentry Crash Report:


Attachments
Screenshot (236.37 KB, image/png)
2011-04-25 19:24 UTC, Pyroman
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pyroman 2011-04-25 19:24:01 UTC
Created attachment 59306 [details]
Screenshot

Version:           unspecified (using KDE 4.6.2) 
OS:                Linux

Notification window slides out of screen when application updates existing notification instance instead of creating new one every time.

Reproducible: Always
Comment 1 Ilya 2011-04-25 19:51:24 UTC
*** This bug has been confirmed by popular vote. ***
Comment 2 Lamarque V. Souza 2011-05-07 23:04:19 UTC
This seems to happen only when custom position is set in ~/.kde/share/config/plasma-desktop-appletsrc. I removed the lines

customPosition=-10,18
customPositionAffinityHoriz=r
customPositionAffinityVert=b

from my plasma-desktop-appletsrc, restarted plasma-desktop and it is working normal now.
Comment 3 Pyroman 2011-05-08 18:44:15 UTC
(In reply to comment #2)
> This seems to happen only when custom position is set in
> ~/.kde/share/config/plasma-desktop-appletsrc. I removed the lines
> 
> customPosition=-10,18
> customPositionAffinityHoriz=r
> customPositionAffinityVert=b
> 
> from my plasma-desktop-appletsrc, restarted plasma-desktop and it is working
> normal now.

Yes, removing that lines helped. Thank You.
Comment 4 Lamarque V. Souza 2011-05-10 02:26:23 UTC
Git commit 0624d4f3d4ba82a04beea682f79982030e63259c by Lamarque V. Souza.
Committed on 10/05/2011 at 02:22.
Pushed by lvsouza into branch 'KDE/4.6'.

Adjust StackDialog's custom position after a resize event. The position is
not saved, so next time it will appear at the same position where it was
before the resize event.

BUG: 271703
FIXED-IN: 4.6.4
(cherry picked from commit 9d4f1f9d3271ab7a1e4238882c10c5ed9e669918)

M  +3    -1    plasma/generic/applets/notifications/ui/stackdialog.cpp     

http://commits.kde.org/kde-workspace/0624d4f3d4ba82a04beea682f79982030e63259c
Comment 5 Lamarque V. Souza 2011-05-10 02:26:24 UTC
Git commit 9d4f1f9d3271ab7a1e4238882c10c5ed9e669918 by Lamarque V. Souza.
Committed on 10/05/2011 at 02:22.
Pushed by lvsouza into branch 'master'.

Adjust StackDialog's custom position after a resize event. The position is
not saved, so next time it will appear at the same position where it was
before the resize event.

BUG: 271703
FIXED-IN: 4.6.4

M  +3    -1    plasma/generic/applets/notifications/ui/stackdialog.cpp     

http://commits.kde.org/kde-workspace/9d4f1f9d3271ab7a1e4238882c10c5ed9e669918
Comment 6 Lamarque V. Souza 2011-05-14 18:08:28 UTC
*** Bug 273267 has been marked as a duplicate of this bug. ***