Adjust StackDialog's custom position after a resize event. The position is not saved, so next time it will appear at the same position where it was before the resize event.

BUG: 271703
FIXED-IN: 4.6.4